<resources>
    <string name="app_name">Lunch Box</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_guest">Guest</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid. Password must be at least 4 characters, no more than 8 characters, and must include at least one upper case letter, one lower case letter, and one numeric digit</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_phone">This phone number is invalid. Please enter a valid 10 digit phone number</string>
    <string name="error_invalid_address">This address is invalid. The correct format of an address is 123 Abc St(Street), Hyderabad(City), TS(State) 123456(6 digit Zipcode)</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sms_permission_rationale">"SMS permissions are needed for phone verification."</string>
    <string name="title_activity_your_location">Your Location</string>
    <string name="buttonSearch">Search</string>
    <string name="hintAddressText">Enter your address</string>
    <string name="confirmLoc">Confirm Location</string>
    <string name="title_activity_menu">Menu</string>

    <string name="title_activity_order">Your Box</string>
    <string name="title_activity_home">Home</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search by Box ID</string>
    <string name="action_contact">Contact Us</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_register">Register</string>
    <string name="historyItem_order">Order</string>
    <string name="historyItem_orderAgain">Re-Order</string>
    <string name="historyItem_cancelOrder">Cancel</string>
    <string name="historyItem_trackDelivery">Track</string>
    <string name="orderPopup_close">Close</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_phone">Phone</string>
    <string name="register_address">Address</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_submit">Submit</string>
    <string name="order_cancel">Cancel</string>
    <string name="order_placeOrder">Place Order</string>
    <string name="order_cashOnDelivery">Cash On Delivery</string>
    <string name="order_title">Review Order</string>
    <string name="menu_next">Next</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sign_in_google">Sign In with Google</string>
    <string name="boxID_label">Box ID: %1$s</string>
    <string name="status_label">Status: %1$s</string>
    <string name="rupee_symbol">₹ %1$s</string>
    <string name="total_label">Total</string>
    <string name="deliveryEstimate_label">Delivery estimate - %1$s mins.</string>
    <string name="google_signout">Sign out from Google</string>
    <string name="welcome_greeting">Hi %1$s</string>
    <string name="contact_email"><u>admin@alunchbox.in</u></string>
    <string name="contact_addressTitle">Address</string>
    <string name="contact_address"><u>Kavuri Hills Phase 1, Kavuri Hills, Jubilee Hills, Hyderabad, Telangana 500033</u></string>
    <string name="contact_phoneTitle">Phone</string>
    <string name="contact_phone"><u>+91-9827384711</u></string>
    <string name="contact_emailTitle">Email</string>
    <string name="contact_webTitle">Web</string>
    <string name="contact_web"><u>http://www.alunchbox.in</u></string>
    <string name="menu_totalAmountTitle">Total : ₹</string>
    <string name="zero">0</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="menu_item_photo">Menu Item Photo</string>
    <string name="close_popup">Close Popup</string>
    <string name="title_activity_admin_home">Admin</string>
    <string name="title_activity_admin_order">Box</string>
    <string name="admin_change_status">Change Status</string>
    <string name="admin_modify_order">Modify Order</string>
    <string name="admin_cancel_order">Cancel Order</string>
    <string name="admin_order_title">Order</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_admin_customer">Customer Information</string>
    <string name="admin_order_customer_name">Name: %1$s %2$s</string>
    <string name="admin_order_customer_phone">Phone: %1$s</string>
    <string name="menuitem_table_text">%1$s - %2$s</string>
    <string name="background_image">Background Image</string>
    <string name="title_activity_location">Location</string>
    <string name="logo">Logo</string>
    <string name="admin_customer_next">Next</string>
    <string name="customer_information_title">Customer Information</string>
    <string name="number_zero">0</string>
    <string name="delivery_instructions_hint">Delivery Instructions...</string>
    <string name="cancel_reason_hint">Please enter a reason...</string>
    <string name="reason">Reason: %1$s</string>
    <string name="title_activity_admin_menu">Admin Menu</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="menu">Menu</string>
    <string name="meals">Meals</string>
    <string name="snacks">Snacks</string>

</resources>
