<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.lunchbox.firebase.AdminHomeActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_menu"
        android:orderInCategory="97"
        android:title="@string/menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="98"
        android:title="@string/signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_google_signout"
        android:orderInCategory="99"
        android:title="@string/google_signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
