<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.lunchbox.firebase.HomeActivity">
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="1"
        android:title="@string/signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_google_signout"
        android:orderInCategory="2"
        android:title="@string/google_signout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />
</menu>
