<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.lunchbox.firebase.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:background="@color/colorBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/register_firstName"
        android:ems="10"
        android:id="@+id/firstName"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:hint="@string/register_lastName"
        android:ems="10"
        android:id="@+id/lastName"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/register_phone"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/register_address"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/address"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:background="@drawable/inputtext_rounded_corners"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_submit"
        android:id="@+id/submit"
        android:background="@drawable/button_rounded_corners_accent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"/>

</RelativeLayout>
