<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customerLocationLayout"
    tools:context="in.lunchbox.firebase.LocationActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_Search"
        android:text="@string/buttonSearch"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"/>
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/userInputLocation"
        android:hint="@string/hintAddressText"
        android:layout_toStartOf="@+id/button_Search"
        android:layout_toLeftOf="@+id/button_Search"
        android:layout_alignParentTop="true"/>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userInputLocation"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/confirmLocation"
        android:text="@string/confirmLoc"
        android:textColor="@color/textColorPrimary"
        android:background="@color/colorAccent"/>

</RelativeLayout>
