<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.lunchbox.firebase.ContactActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="5dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp"
        android:id="@+id/contactCard"
        android:background="@color/colorAccent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/addressLayout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/addressIcon"
                    android:src="@drawable/ic_home_white_24dp"
                    android:contentDescription="@string/contact_addressTitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/addressIcon"
                    android:layout_toRightOf="@+id/addressIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/addressTitle"
                    android:text="@string/contact_addressTitle"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactAddress"
                    android:text="@string/contact_address"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/addressIcon"
                    android:textColor="@color/textColorPrimary"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/phoneLayout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/phoneIcon"
                    android:src="@drawable/ic_phone_white_24dp"
                    android:contentDescription="@string/contact_phoneTitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/phoneIcon"
                    android:layout_toRightOf="@+id/phoneIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/phoneTitle"
                    android:text="@string/contact_phoneTitle"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactPhone"
                    android:text="@string/contact_phone"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/phoneIcon"
                    android:textColor="@color/textColorPrimary"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/emailLayout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/emailIcon"
                    android:src="@drawable/ic_email_white_24dp"
                    android:contentDescription="@string/contact_emailTitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/emailIcon"
                    android:layout_toRightOf="@+id/emailIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/emailTitle"
                    android:text="@string/contact_emailTitle"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactEmail"
                    android:text="@string/contact_email"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/emailIcon"
                    android:textColor="@color/textColorPrimary"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/webLayout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/webIcon"
                    android:src="@drawable/ic_web_white_24dp"
                    android:contentDescription="@string/contact_webTitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/webIcon"
                    android:layout_toRightOf="@+id/webIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/webTitle"
                    android:text="@string/contact_webTitle"
                    android:textColor="@color/textColorPrimary"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contactWeb"
                    android:text="@string/contact_web"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/webIcon"
                    android:textColor="@color/textColorPrimary"/>
            </RelativeLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>

</LinearLayout>
