<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="in.lunchbox.firebase.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/logo"
                android:src="@drawable/lunchbox"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorPrimary"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorInputTextFields"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/textColorPrimary"
                    android:textColorHint="@color/textColorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorInputTextFields"/>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_rounded_corners"
                android:textColor="@color/textColorPrimary"
                android:theme="@style/My.Button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/google_sign_in_button"
                android:text="@string/action_sign_in_google"
                android:textStyle="bold"
                android:paddingStart="18dp"
                android:paddingLeft="18dp"
                android:paddingEnd="60dp"
                android:paddingRight="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_rounded_corners"
                android:textColor="@color/textColorPrimary"
                android:drawableStart="@drawable/btn_google_light"
                android:drawableLeft="@drawable/btn_google_light"
                android:theme="@style/My.Button" />

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/action_register"
                android:textStyle="italic"
                android:background="@android:color/transparent"
                android:textColor="@color/colorSecondary"
                android:theme="@style/My.Button"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
